[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/Marker/ToggleablePlacemark.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/Marker/ToggleableShopPlacemark.gd" type="Script" id=2]

[sub_resource type="GDScript" id=1]
script/source = "extends ItemList

signal dragged_shop_item(index)
signal dropped_shop_item(shop_item)

var _dragging_index := -1

func get_drag_data(position):
	var result := get_item_at_position(position, true)
	if result != -1:
		_dragging_index = result
		return get_item_metadata(result)

func can_drop_data(_position, data):
	return data is Item or data is ShopItem
	
func drop_data(_position, data):
	if data is Item:
		emit_signal(\"dropped_shop_item\", ShopItem.new(data))
	elif data is ShopItem:
		emit_signal(\"dropped_shop_item\", data)

func _notification(what: int) -> void:
	if what == NOTIFICATION_DRAG_END and _dragging_index != -1:
		_dragging_index = -1
		if get_viewport().gui_is_drag_successful():
			emit_signal(\"dragged_shop_item\", _dragging_index)

func _gui_input(event):
	# Prevent scrolling events from propagating (avoid zooming in/out while the mouse is inside the shop list)
	if event is InputEventMouseButton and event.pressed and [BUTTON_WHEEL_UP, BUTTON_WHEEL_DOWN, BUTTON_WHEEL_LEFT, BUTTON_WHEEL_RIGHT].has(event.button_index):
		accept_event()
"

[node name="ToggleableShopPlacemark" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="ToggleButton" parent="MapControl" index="0"]
flat = false

[node name="ShopPlacemark" type="VBoxContainer" parent="MapControl/Control/Panel" index="0"]
margin_left = 7.0
margin_top = 7.0
margin_right = 203.0
margin_bottom = 389.0
mouse_filter = 0

[node name="NpcNameLabel" type="Label" parent="MapControl/Control/Panel/ShopPlacemark" index="0"]
margin_right = 196.0
margin_bottom = 18.0
size_flags_horizontal = 3
align = 1

[node name="GridContainer" type="GridContainer" parent="MapControl/Control/Panel/ShopPlacemark" index="1"]
margin_top = 22.0
margin_right = 196.0
margin_bottom = 50.0
columns = 4

[node name="Label" type="Label" parent="MapControl/Control/Panel/ShopPlacemark/GridContainer" index="0"]
margin_top = 5.0
margin_right = 30.0
margin_bottom = 23.0
text = "Unk0"

[node name="Unk0SpinBox" type="SpinBox" parent="MapControl/Control/Panel/ShopPlacemark/GridContainer" index="1"]
margin_left = 34.0
margin_right = 96.0
margin_bottom = 28.0

[node name="Label2" type="Label" parent="MapControl/Control/Panel/ShopPlacemark/GridContainer" index="2"]
margin_left = 100.0
margin_top = 5.0
margin_right = 130.0
margin_bottom = 23.0
text = "Unk1"

[node name="Unk1SpinBox" type="SpinBox" parent="MapControl/Control/Panel/ShopPlacemark/GridContainer" index="3"]
margin_left = 134.0
margin_right = 196.0
margin_bottom = 28.0

[node name="GridContainer2" type="GridContainer" parent="MapControl/Control/Panel/ShopPlacemark" index="2"]
margin_top = 54.0
margin_right = 196.0
margin_bottom = 78.0
columns = 2

[node name="Label" type="Label" parent="MapControl/Control/Panel/ShopPlacemark/GridContainer2" index="0"]
margin_top = 3.0
margin_right = 66.0
margin_bottom = 21.0
text = "Wallet Type"

[node name="WalletTypeOptionButton" type="OptionButton" parent="MapControl/Control/Panel/ShopPlacemark/GridContainer2" index="1"]
margin_left = 70.0
margin_right = 196.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "None"
items = [ "None", null, false, 0, null, "Gold", null, false, 1, null, "Rift Points", null, false, 2, null, "Blood Orbs", null, false, 3, null, "Silver Tickets", null, false, 4, null, "Golden Gemstones", null, false, 5, null, "Rental Points", null, false, 6, null, "Reset Job Points", null, false, 7, null, "Reset Craft Skills", null, false, 8, null, "High Orbs", null, false, 9, null, "Dominion Points", null, false, 10, null, "Adventure Pass Points", null, false, 11, null, "Custom Made Service Tickets", null, false, 12, null, "Bitterblack Maze Reset Tickets", null, false, 13, null, "Golden Dragon Marks", null, false, 14, null, "Silver Dragon Marks", null, false, 15, null, "Red Dragon Marks", null, false, 16, null ]
selected = 0

[node name="ScrollContainer" type="ScrollContainer" parent="MapControl/Control/Panel/ShopPlacemark" index="3"]
margin_top = 82.0
margin_right = 196.0
margin_bottom = 382.0
rect_min_size = Vector2( 0, 300 )

[node name="ItemList" type="ItemList" parent="MapControl/Control/Panel/ShopPlacemark/ScrollContainer" index="0"]
margin_right = 196.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3
allow_rmb_select = true
script = SubResource( 1 )

[connection signal="dragged_shop_item" from="MapControl/Control/Panel/ShopPlacemark/ScrollContainer/ItemList" to="." method="_on_ItemList_dragged_shop_item"]
[connection signal="dropped_shop_item" from="MapControl/Control/Panel/ShopPlacemark/ScrollContainer/ItemList" to="." method="_on_ItemList_dropped_shop_item"]
[connection signal="item_rmb_selected" from="MapControl/Control/Panel/ShopPlacemark/ScrollContainer/ItemList" to="." method="_on_ItemList_item_rmb_selected"]
